public/styles.css
/* styles.css */

body {
    font-family: 'Arial', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #ededed;
}

main {
    text-align: center;
    padding: 20px;
}

h1 {
    color: #075e54;
}

form {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
    justify-content: space-between;
}

form textarea {
    width: 100%;
    margin-bottom: 10px;
    padding: 10px;
    font-size: 16px;
    border: 1px solid #e1e1e1;
    border-radius: 5px;
    resize: vertical;
    box-sizing: border-box;
}

form select, form button {
    width: 40%;
    margin: 5px;
    padding: 10px;
    font-size: 16px;
    border: 1px solid #e1e1e1;
    border-radius: 5px;
    box-sizing: border-box;
}

#chat-log {
    height: 500px;
    overflow-y: auto;
    background-color: #f5f5f5; /* Light gray background similar to WhatsApp chat background */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    margin-top: 20px;
}

.message {
    margin-bottom: 10px;
    border-radius: 8px;
    overflow: hidden;
    margin: 10px 10px;
    text-align: left;
}

.message--sent {
    background-color: #dcf8c6;
    color: #000;
    margin-left: 40%;
}

.message--received {
    background-color: #ffffff;
    color: #000;
    margin-right: 40%;
    padding: 15px;
}

.message__text {
    margin: 10px;
    font-size: 16px;
    line-height: 1.6;
}

button {
    background-color: #128c7e;
    color: #fff;
    cursor: pointer;
    border: none;
    border-radius: 5px;
    padding: 10px 20px;
    font-size: 16px;
    transition: background-color 0.3s ease;
}

button:disabled,
button[disabled] {
    background-color: #cccccc;
}

